--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "kulup-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
